<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/select"
    tools:context="com.example.user.easykoreanlearning.select"
    android:fillViewport="true">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="56dp"
        android:layout_marginTop="29dp"
        android:text="Character"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="388dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="MissingConstraints"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="388dp"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:scrollbars="vertical">

            <Button
                android:id="@+id/button11"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:background="@color/background"
                android:text="@string/m"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/button24"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button20"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp"
                android:background="@color/background"
                android:text="@string/n"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@+id/button21"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/button21"
                app:layout_constraintTop_toBottomOf="@+id/button21" />

            <Button
                android:id="@+id/button21"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp"
                android:background="@color/background"
                android:text="@string/s"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@+id/button23"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/button23"
                app:layout_constraintTop_toBottomOf="@+id/button23" />

            <Button
                android:id="@+id/button22"
                android:layout_width="99dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp"
                android:background="@color/background"
                android:text="@string/ng"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@+id/button28"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/button28"
                app:layout_constraintTop_toBottomOf="@+id/button28" />

            <Button
                android:id="@+id/button23"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:background="@color/background"
                android:text="@string/d"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@+id/button24"
                app:layout_constraintHorizontal_bias="0.533"
                app:layout_constraintStart_toStartOf="@+id/button24"
                app:layout_constraintTop_toBottomOf="@+id/button24" />

            <Button
                android:id="@+id/button24"
                android:layout_width="101dp"
                android:layout_height="49dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:background="@color/background"
                android:text="@string/g"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button25"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp"
                android:background="@color/background"
                android:text="ㅏ"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@+id/button27"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/button27"
                app:layout_constraintTop_toBottomOf="@+id/button27" />

            <Button
                android:id="@+id/button26"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp"
                android:background="@color/background"
                android:text="ㅜ"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@+id/button25"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/button25"
                app:layout_constraintTop_toBottomOf="@+id/button25" />

            <Button
                android:id="@+id/button27"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="28dp"
                android:background="@color/background"
                android:text="ㅗ"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@+id/button18"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/button18"
                app:layout_constraintTop_toBottomOf="@+id/button18" />

            <Button
                android:id="@+id/button28"
                android:layout_width="99dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp"
                android:background="@color/background"
                android:text="ㅣ"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@+id/button26"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/button26"
                app:layout_constraintTop_toBottomOf="@+id/button26" />

            <Button
                android:id="@+id/button18"
                android:layout_width="103dp"
                android:layout_height="45dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp"
                android:background="@color/background"
                android:text="ㅡ"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@+id/button11"
                app:layout_constraintHorizontal_bias="0.272"
                app:layout_constraintStart_toStartOf="@+id/button11"
                app:layout_constraintTop_toBottomOf="@+id/button11" />

            <Button
                android:id="@+id/button19"
                android:layout_width="100dp"
                android:layout_height="49dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp"
                android:background="@color/background"
                android:text="ㅈ"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@+id/button20"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/button20"
                app:layout_constraintTop_toBottomOf="@+id/button20" />

            <Button
                android:id="@+id/button31"
                android:layout_width="100dp"
                android:layout_height="49dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp"
                android:background="@color/background"
                android:text="ㅎ"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@+id/button34"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/button34"
                app:layout_constraintTop_toBottomOf="@+id/button34" />

            <Button
                android:id="@+id/button33"
                android:layout_width="100dp"
                android:layout_height="49dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp"
                android:background="@color/background"
                android:text="ㅓ"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@+id/button19"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/button19"
                app:layout_constraintTop_toBottomOf="@+id/button19" />

            <Button
                android:id="@+id/button34"
                android:layout_width="100dp"
                android:layout_height="49dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp"
                android:background="@color/background"
                android:text="ㅑ"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@+id/button33"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/button33"
                app:layout_constraintTop_toBottomOf="@+id/button33" />

            <Button
                android:id="@+id/button35"
                android:layout_width="100dp"
                android:layout_height="49dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp"
                android:background="@color/background"
                android:text="ㅕ"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@+id/button22"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/button22"
                app:layout_constraintTop_toBottomOf="@+id/button22" />

            <Button
                android:id="@+id/button36"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp"
                android:background="@color/background"
                android:text="ㅛ"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@+id/button31"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/button31"
                app:layout_constraintTop_toBottomOf="@+id/button31" />

            <Button
                android:id="@+id/button37"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp"
                android:background="@color/background"
                android:text="ㄹ"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/button39"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/button39"
                app:layout_constraintTop_toBottomOf="@+id/button39"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/button38"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp"
                android:background="@color/background"
                android:text="ㅠ"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/button36"
                app:layout_constraintStart_toStartOf="@+id/button36"
                app:layout_constraintTop_toBottomOf="@+id/button36" />

            <Button
                android:id="@+id/button39"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp"
                android:background="@color/background"
                android:text="ㅐ"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@+id/button35"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/button35"
                app:layout_constraintTop_toBottomOf="@+id/button35" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>


    <Button
        android:id="@+id/btnHome"
        android:layout_width="441dp"
        android:layout_height="59dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimary"
        android:text="HOME"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>


